--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,5 +1,13 @@
 // colors
+$dark-grey: #333;
+$grey: #666;
+$blue: #1c88bf;
+$dark-blue: #364051;
+$off-white: #f7f7f7;
 
+// font size
+$font-size-l: 1.8rem;
+$font-size-s: 1.4rem;
 
 // spacing
 $s-size: 1.2rem;
